--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.8",
-    "next-themes": "latest",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
@@ -56,7 +56,7 @@
     "react-is": "^19.1.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
